# cobo-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
data/: address_book.json  audit.jsonl  funding_events.jsonl  proposals.json  wallet_state.json  whitelist.json
docs/: ai-collaboration.md  architecture.md  requirement-1-user-personas.md  requirements-2-solved-problem.md  requirements-3-architecture.md  tool-test-report.md
scripts/: approve_proposal.py  demo_cli.py  operator_console.py
src/cobo_wallet/: __init__.py  amounts.py  models.py  server.py
src/cobo_wallet/config/: env.py  policy.py
src/cobo_wallet/operator/: service.py
src/cobo_wallet/policy/: __init__.py  engine.py
src/cobo_wallet/store/: address_book.py  audit.py  common.py  funding.py  proposals.py  simulated_balance.py  wallet_state.py  whitelist.py
src/cobo_wallet/tools/: __init__.py  add_recipient.py  allow_recipient.py  cancel_proposal.py  check_request_capability.py  confirm_proposal.py  confirm_transfer.py  context.py  create_transfer_proposal.py  delete_recipient.py  estimate_transfer.py  execute_transfer.py  get_account.py  get_balance.py  get_overview.py  get_proposal.py  get_receive_card.py  get_transaction_status.py  list_policy.py  list_proposals.py  list_recipients.py  list_transactions.py  list_whitelist.py  preview.py  proposal_derived.py  proposal_view.py  request_local_authorization.py  revoke_recipient.py  update_recipient.py
src/cobo_wallet/wallet/: __init__.py  rpc.py  service.py  signer.py
