[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cobo-wallet-mcp"
version = "0.1.0"
description = "A Python MCP wallet demo for Codex on Ethereum Sepolia."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.12.0",
  "pydantic>=2.11.0",
  "python-dotenv>=1.0.1",
  "streamlit>=1.44.0",
  "web3>=7.0.0",
]

[project.scripts]
cobo-wallet-mcp = "cobo_wallet.server:main"
cobo-wallet-approve = "scripts.approve_proposal:main"
cobo-wallet-authorize = "scripts.approve_proposal:main"
cobo-wallet-demo = "scripts.demo_cli:main"
cobo-wallet-operator = "scripts.operator_console:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cobo_wallet", "scripts"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/scripts",
  "/docs",
  "/README.md",
  "/pyproject.toml",
  "/.env.example",
]

[tool.uv]
package = true
